ui.css
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');

/*
Copyright 2014-2017 darkf

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

/* Main stylesheet for the DarkFO UI */

body {
  font-family: 'VT323', monospace;
  margin: 0;
}

.disable-selection {
  /* disable text selections */
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

#game-container {
  position: relative;
  width: 800px;
  height: 600px;
  background-color: black;
}

/* canvas overlay */
#overlay-container {
  position: absolute;
  left: 0px;
  top: 0px;
  color: white;
  font-family: monospace;
  font-size: 8pt;
  width: 100%;

  /* don't affect the cursor at all */
  pointer-events: none;
}

#overlay {
  position: relative;
}

#fpsOverlay {
  position: absolute;
  right: 10px;
  top: 5px;
}

#bar {
  position: absolute;
  left: 80px;
  /* (canvas width - 640) / 2 */
  bottom: 0px;
  width: 640px;
  height: 99px;
  background-image: url("art/intrface/iface.png");
}

#endContainer {
  position: absolute;
  /*left: 578px; top: 36px;*/
  bottom: 2px;
  right: 2px;
  width: 57px;
  height: 58px;
  background-image: url("art/intrface/endanim.png");
  /*background-position: -228px;*/

  /* animation for the end turn/combat button */
  /* 1 second long, 5 frames, alternates forward/reverse */
  animation: endAnimation 1s steps(5) infinite;
  animation-fill-mode: forwards;
  animation-direction: alternate;

  /* vendor prefixes because the Web sucks */
  -webkit-animation: endAnimation 1s steps(5) infinite;
  -webkit-animation-fill-mode: forwards;
  -webkit-animation-direction: alternate;

  animation-play-state: paused;
  -webkit-animation-play-state: paused;
}

@keyframes endAnimation {
  from {
    background-position: 0px;
  }

  to {
    background-position: -285px;
  }
}

@-webkit-keyframes endAnimation {
  from {
    background-position: 0px;
  }

  to {
    background-position: -285px;
  }
}

#endTurnButton {
  position: absolute;
  top: 5px;
  left: 10px;
  width: 38px;
  height: 22px;
  visibility: hidden;
  background-image: url("art/intrface/endturnu.png");
}

#endTurnButton:active {
  background-image: url("art/intrface/endturnd.png");
}

#endCombatButton {
  position: absolute;
  top: 27px;
  left: 10px;
  width: 38px;
  height: 22px;
  visibility: hidden;
  background-image: url("art/intrface/endcmbtu.png");
}

#endCombatButton:active {
  background-image: url("art/intrface/endcmbtd.png");
}

#skilldexButton {
  position: absolute;
  left: 523px;
  top: 7px;
  width: 22px;
  height: 21px;
}

#skilldexButton:active {
  background-image: url("art/intrface/bigreddn.png");
}

#displayLog {
  position: absolute;
  left: 26px;
  top: 30px;
  width: 158px;
  height: 54px;
  color: #00FF00;
  font-size: 8pt;
  overflow: hidden;
}

#attackButtonContainer {
  position: absolute;
  left: 265px;
  top: 26px;
  width: 188px;
  height: 67px;
}

#attackButtonCalled {
  position: absolute;
  right: 7px;
  bottom: 7px;
  width: 18px;
  height: 18px;
  background-image: url("art/intrface/bullseye.png");
  display: none;
}

#attackButtonAP {
  position: absolute;
  bottom: 7px;
  left: 7px;
  width: 64px;
  height: 12px;
  background-image: url("art/intrface/mvepnt.png");
  background-repeat: no-repeat;
}

#attackButtonAPDigit {
  position: absolute;
  top: 0px;
  left: 20px;
  width: 9px;
  height: 12px;
  background-image: url("art/intrface/mvenum.png");
}

#attackButtonType {
  position: absolute;
  top: 5px;
  right: 5px;
  width: 64px;
  height: 12px;
}

#attackButtonWeapon {}

#attackButtonContainer:active #attackButtonWeapon {
  /* move weapon image up */
  transform: translateY(-2px);
}

#attackButton {
  position: absolute;
  left: 0px;
  top: 0px;
  width: 188px;
  height: 67px;
  background-image: url("art/intrface/sattkbup.png");
}

#attackButtonContainer:active #attackButton {
  background-image: url("art/intrface/sattkbdn.png");
}
/*
#skilldexButton {
  position: absolute;
  left: 522px;
  top: 5px;
  width: 22px;
  height: 21px;
}
/* ... */

